# rephonic-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  api.md  pyproject.toml
.claude/skills/release/: SKILL.md
examples/: async_fanout.py  brand_monitoring.py  contacts.py  pagination.py  search.py  transcripts.py
skills/rephonic-enrich-with-contacts/: SKILL.md
skills/rephonic-find-similar-podcasts/: SKILL.md
skills/rephonic-pull-transcript/: SKILL.md
skills/rephonic-search-with-filters/: SKILL.md
skills/rephonic-setup/: SKILL.md
src/rephonic/: __init__.py  _base_client.py  _cli.py  _client.py  _exceptions.py  filters.py  pagination.py
src/rephonic/resources/: __init__.py  account.py  charts.py  common.py  episodes.py  podcasts.py  search.py
tests/: conftest.py  test_async.py  test_cli.py  test_client.py  test_filters.py  test_pagination.py  test_resources.py
