[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rephonic"
dynamic = ["version"]
description = "Official Python client for the Rephonic podcast API."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Rephonic", email = "support@rephonic.com" }]
keywords = [
    "rephonic",
    "podcast",
    "podcasts",
    "api",
    "transcripts",
    "demographics",
    "charts",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "respx>=0.20",
    "mypy>=1.5",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://rephonic.com"
Documentation = "https://rephonic.com/developers"
Repository = "https://github.com/getrephonic/rephonic-python"
Issues = "https://github.com/getrephonic/rephonic-python/issues"

[tool.hatch.version]
path = "src/rephonic/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/rephonic",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rephonic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
